# vampyr

./: .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CMakeLists.txt  Pipfile  README.md  VERSION  environment.yml  flake.nix  pyproject.toml  requirements.txt  setup  setup.cfg  setup.py
.circleci/: Dockerfile  config.yml  run_commands
.github/: vampyr-codecov.yml  vampyr-gha.yml
.github/workflows/: binder.yml  build-test.yml  code-coverage.yml  palisade.yml  pip-install.yml
binder/: environment.yml  postBuild
cmake/: CMakeCache.txt  autocmake.yml
cmake/compiler_flags/: CXXFlags.cmake  GNU.CXX.cmake  Intel.C.cmake  Intel.CXX.cmake  clang.C.cmake  clang.CXX.cmake
cmake/custom/: eigen.cmake  external.cmake  fetch_mrcpp.cmake  fetch_pybind11.cmake  main.cmake  mpi.cmake  python.cmake  testing_macros.cmake  tests.cmake
docs/: bibliography.bib  conf.py  index.rst  installation.rst  requirements.txt  vampyr-docs.yml
docs/notebooks/: PCMSolvent.ipynb  beryllium_atom.ipynb  function_representations.ipynb  harmonic_oscillator_evolution.ipynb  helium_atom.ipynb  helmholtz_equation.ipynb  hydrogen_atom.ipynb  introduction.ipynb  multiwavelets.ipynb  poisson_equation.ipynb  vampyr_intro.ipynb
docs/source/: api.rst  conf.py  index.rst  usage.rst  vampyr.rst
examples/: BasisPlotter.py  scaling_plots.ipynb
src/: CMakeLists.txt
src/vampyr/: CMakeLists.txt  __init__.py  environ.py  export_vampyr.cpp  plotter.py
src/vampyr/core/: bases.h  filter.h
src/vampyr/functions/: PyGaussian.h  PyRepresentableFunction.h  PyScalingFunction.h  PyWaveletFunction.h  functions.h  gaussians.h
src/vampyr/operators/: convolutions.h  derivatives.h
src/vampyr/tests/: CMakeLists.txt  test_arithmetics_1d.py  test_arithmetics_3d.py  test_basis.py  test_convolutions_1d.py  test_convolutions_3d.py  test_derivatives_1d.py  test_derivatives_3d.py  test_function_map_1d.py  test_function_map_3d.py  test_gauss_1d.py  test_gauss_3d.py  test_grids_and_project_1d.py  test_grids_and_project_3d.py  test_mra_1d.py  test_projector1d.py  test_projector3d.py  test_time_evolution_1d.py  test_trees_1d.py  test_trees_3d.py
src/vampyr/treebuilders/: PyFunctionMap.h  PyMWProjector.h  PyProjectors.h  applys.h  arithmetics.h  grids.h  maps.h  project.h
src/vampyr/trees/: trees.h  world.h
tests/: CMakeLists.txt  pot_gen.py  test_arithmetics_1d.py  test_arithmetics_3d.py  test_basis.py  test_convolutions_1d.py  test_convolutions_3d.py  test_derivatives_1d.py  test_derivatives_3d.py  test_function_map_1d.py  test_function_map_3d.py  test_gauss.py  test_gauss_1d.py  test_gauss_3d.py  test_grids_and_project_1d.py  test_grids_and_project_3d.py  test_mra.py  test_mra_1d.py  test_mra_3d.py  test_trees_1d.py  test_trees_3d.py  test_vampyr3d.py
vampyr/: CMakeLists.txt  PyAnalyticFunction.h  PyBoundingBox.cpp  PyBoundingBox.h  PyRepresentableFunction.h  __init__.py  __init__.py.in  applys.cpp  bases.cpp  derivative.cpp  export_vampyr.cpp  functions.cpp  fundamentalTypes.cpp  math.cpp  methods.cpp  operators.cpp  project.cpp  project.h  py_push_back.h  representable_functions.cpp  test_vampyr1d.py  test_vampyr2d.py  test_vampyr3d.py  trees.cpp  utils.h  vampyr.cpp  vampyr1d.cpp  vampyr2d.cpp  vampyr3d.cpp  version.py  world.cpp
vampyr/applys/: CMakeLists.txt  applys.cpp  applys.h
vampyr/bases/: CMakeLists.txt  bases.cpp
vampyr/core/: bases.h
vampyr/functions/: AnalyticFunction.cpp  AnalyticFunction.h  BoysFunction.cpp  CMakeLists.txt  GaussExp.cpp  GaussExp.h  GaussFunc.cpp  GaussFunc.h  GaussPoly.cpp  GaussPoly.h  LegendrePoly.cpp  Polynomial.cpp  PyGaussian.h  PyRepresentableFunction.h  PyScalingFunction.h  functions.cpp  functions.h  gaussians.h
vampyr/math/: CMakeLists.txt  math.cpp  math.h
vampyr/operators/: ABGVOperator.cpp  ABGVOperator.h  BSOperator.cpp  BSOperator.h  CMakeLists.txt  ConvolutionOperator.cpp  DerivativeKernel.cpp  DerivativeOperator.cpp  HelmholtzKernel.cpp  HelmholtzOperator.cpp  HelmholtzOperator.h  IdentityConvolution.cpp  IdentityConvolution.h  IdentityKernel.cpp  MWOperator.cpp  MWOperator.h  OperatorState.cpp  OperatorState.h  OperatorStatistics.cpp  OperatorStatistics.h  PHOperator.cpp  PHOperator.h  PoissonOperator.cpp  PoissonOperator.h  convolutions.h  derivatives.h  operators.cpp  operators.h  operators_grid.cpp  operators_grid.h
vampyr/project/: CMakeLists.txt  project.cpp  project.h
vampyr/treebuilders/: PyMWProjector.h  applys.h  arithmetics.h  project.h
vampyr/trees/: CMakeLists.txt  trees.cpp  trees.h  world.h
vampyr/world/: CMakeLists.txt  world.cpp  world.h
