[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-rws"
norecursedirs = [
  "env",
  ".direnv",
  "venv",
  ".env",
  ".venv",
  "docs",
  ".eggs",
  ".git",
]

[build-system]
requires = [
  "mpi4py>=3.0",
  "pybind11[global]>=2.6",
  "setuptools>=46.4.0",
  "wheel",
  "scikit-build>=0.13",
  "cmake>=3.17",
  "ninja; platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"
