[metadata]
name = vampyr
description = The Very Accurate Multiresolution Python Routines (VAMPyR) package is a high level Python interface to the MRCPP code.
license = LGPLv3+
license_files =
   LICENSE
author = Magnar Bjørgve
url = https://vampyr.readthedocs.io/en/latest/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Chemistry

[options]
python_requires = >= 3.8

setup_requires =
    pybind11-global >= 2.6
    setuptools >=46.4.0
    wheel
    scikit-build >=0.13
    cmake >= 3.17
    ninja; platform_system!='Windows'

install_requires =
    numpy >= 1.15.0

test_suite =
    tests

[options.extras_require]
docs =
    myst_nb
    sphinx
    sphinx_book_theme
    sphinx_thebe
    sphinxcontrib_bibtex

test =
    pytest
    pytest-cov

dev =
    %(docs)s
    %(test)s
    black
    isort

[flake8]
max-line-length = 88
exclude = docs/conf.py
# these error codes interfere with Black
ignore = E203, E231, W503, W504
select = C,E,F,W,B
